# SimpleRISCImplementation

./: .gitignore  CMakeLists.txt  CMakePresets.json  DOXYFILE  README.md  cpp.hint
assembler/include/: argeparse.h  argparse.h  assembler.h  exceptions.h  lexer.h  logging.h  pch.h
assembler/source/: argparse.c  assembler.c  exceptions.c  lexer.c  logging.c  parser.c
common/include/: exceptions.h  logging.h
debugger/source/: debugger.c
include/: format.h  isa.h
resources/: grammar.txt
resources/diagrams/: 3-Layered-Architecture-OverviewDiagram.drawio
simulator/source/: simulator.c
src/core/: assembler.c
src/format/: format-bin.c  format-elf.c  format-pc.c  format.c
src/isa/: isa-arm32.c  isa-i386.c  isa-riscv32.c  isa.c
src/support/: exceptions.c
tests/: Makefile  hello.s
